<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stay_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/stay_home"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/stay_safe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stay_home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/stay_safe"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/stay_safe"
            android:layout_marginHorizontal="84dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/welcome_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/welcome_text_view"
            android:layout_marginHorizontal="75dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_view"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/enter_your_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:maxLines="1" />

        <Button
            android:id="@+id/startquiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="start"
            android:text="@string/start"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>